@@ -64,8 +64,6 @@ public:
         const wxRect *rect = (const wxRect *) NULL );
     virtual void Update();
     
-    virtual void Clear();
-    
     virtual bool SetBackgroundColour( const wxColour &colour );
     virtual bool SetForegroundColour( const wxColour &colour );
     
